# architecture_and_design_patterns

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  help.txt  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.bak  setup.py.bak  style_guide.py  test_api.http  test_db_connection.py  tox.ini
.github/workflows/: release.yml  tests.yml
experiments/: design_experiments.ipynb
src/architecture_patterns/: model.py  orm.py  repository.py
src/batch_allocations/: config.py
src/batch_allocations/adapters/: orm.py  repository.py
src/batch_allocations/domain/: events.py  model.py
src/batch_allocations/entrypoints/: flask_app.py
src/batch_allocations/entrypoints/static/: index.html
src/batch_allocations/service_layer/: messagebus.py  services.py  unit_of_work.py
test/: conftest.py  random_refs.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
test/e2e/: test_api.py
test/integration/: test_orm.py  test_repository.py  test_uow.py
test/unit/: test_allocate.py  test_batches.py  test_product.py  test_services.py
