[metadata]
name = architecture-patterns-ricardo-zambrano
version = 1.0.0
#url = https://github.com/rzambrano1/
author = Ricardo Zambrano
author_email = "Ricardo Zambrano" <rzambrano@gmail.com>

description = This system follows along the examples in Architecture Patterns with Python
#long_description = file: ./pkg_readme/README.md 
#long_description_content_type = text/markdown

license = MIT
license_files = LICENSE 
classifiers = License :: OSI Approved :: MIT License 

######################
# Tool configuration #
######################

[tool:pytest]

testpaths = ./test/
addopts = --cov --strict-markers
xfail_strict = True